--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,18 @@ buildscript {
 }
 
 
+
+allprojects {
+    repositories {
+        jcenter()
+    }
+    apply plugin: 'maven'
+    apply plugin: 'maven-publish'
+    apply plugin: 'java'
+    apply plugin: 'com.jfrog.bintray'
+}
+
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
